# calc

./: CMakeLists.txt  client.cpp  constants.h  fast_operations.h  functions.h  multithreading_server.cpp  slow_operations.h
